2010-07-07  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/OutputRewriter.cpp: Using new ASPSolver interface.
	* src/DLV_ASP_ContextAtom.cpp: Likewise.

2010-06-25  Peter Schueller <ps@kr.tuwien.ac.at>

	* configure.ac: Canonicalized plugin name for packaging.

2010-06-24  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/Makefile.am: added so-version for library which is used by plugin
	and additional context plugins.
	* examples/Makefile.am: Not installing test libraries, but making them
	dlopen-able modules.
	* src/MCSdiagexplPlugin.cpp: Not enabling output rewriter if plugin not
	enabled.
	* include/InputParserDriver.h: Added possibility for parser debugging.
	* configure.ac: Version number for release.

2010-06-23  Peter Schueller <ps@kr.tuwien.ac.at>

	* src/EquilibriumPrintVisitor.cpp: Fixing equilibrium output bug
	(contexts without output beliefs were missing in some cases).
	* src/ParseContext.cpp: Likewise.

2010-06-21  Peter Schueller <ps@kr.tuwien.ac.at>

	* include/Global.h: Added commandline option for enabling rewriters,
	normalized names for plugin commandline options.
	* include/MCSdiagexplPlugin.h: Likewise.
	* src/MCSdiagexplPlugin.cpp: Likewise.
	* src/Global.cpp: Likewise.
	* examples/mcsequilibriumtests.test: Likewise.

	* testsuite/Makefile.am: Allowing test specification to specify rewriting.

2010-06-16  Peter Schueller <ps@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Fixing absolute vs. relative paths.
	* testsuite/run-dlvhex-tests.sh: Likewise.

	* examples/Makefile.am: Distributing all files required for testing.

	* examples/mcsequilibriumtests.test: Registered new testcases.
	* examples/medExample/dmem_opeq.out: Likewise.
	* examples/independent_inc1/dmem_opeq.out: Likewise.

2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* src/Makefile.am: Likewise.