@@ -1,3 +1,8 @@
+2010-07-14  Peter Schueller <ps@kr.tuwien.ac.at>
+
+	* src/OutputRewriter.cpp: Updating to changed ASPSolver interface.
+	* src/DLV_ASP_ContextAtom.cpp: Likewise.
+
 2010-07-07  Peter Schueller <ps@kr.tuwien.ac.at>
 
 	* src/OutputRewriter.cpp: Using new ASPSolver interface.
